--- a/ivy.xml
+++ b/ivy.xml
@@ -9,7 +9,6 @@
         <conf name="master"/>
         <conf name="test" extends="master"/>
         <conf name="runtime" extends="master"/>
-        <conf name="webapp" extends="master"/>
         <conf name="compile" extends="runtime,webapp"/>
         <conf name="default" extends="master"/>
         <!-- Specialization of the 'compile' configuration for closure tools, since some of them contain
@@ -23,8 +22,12 @@
 
     <publications>
         <artifact name="%%CHANGEME%%" type="jar" conf="master"/>
-        <artifact name="ROOT" type="war" conf="war"/>
         <artifact name="%%CHANGEME%%-tests" type="tar.bz2" conf="master"/>
     </publications>
 
+    <dependencies>
+        <!-- indeed -->
+        <dependency org="indeed" name="common-util" rev="${common-util.version}"/>
+    </dependencies>
+        
 </ivy-module>
