NOBUG - Add testutils reference - Pretty much every project ought to be using that, and if they're not they can remove

--- a/ivy.xml
+++ b/ivy.xml
@@ -28,6 +28,9 @@
     <dependencies>
         <!-- indeed -->
         <dependency org="indeed" name="common-util" rev="${common-util.version}"/>
+
+        <!-- test only -->
+        <dependency org="indeed" name="testutils" rev="${testutils.version}" conf="test->default"/>
     </dependencies>
         
 </ivy-module>
