--- a/ivy.xml
+++ b/ivy.xml
@@ -26,9 +26,11 @@
     </publications>
 
     <dependencies>
+        <dependency org="googlecode" name="jsr-305" rev="${jsr-305.version}" conf="compile->default"/>        
         <dependency org="google" name="guava" rev="${google-guava.version}"/>
         <dependency org="apache" name="log4j" rev="${log4j.version}"/>
-        <dependency org="junit" name="junit" rev="${junit.version}" conf="test->default"/>
+        <dependency org="apache" name="commons-io" rev="${commons-io.version}" conf="test->default"/>
+	<dependency org="junit" name="junit" rev="${junit.version}" conf="test->default"/>
         <!-- indeed -->
     </dependencies>
         
