--- a/repo.cfg
+++ b/repo.cfg
@@ -1,4 +1,2 @@
-jenkins=example--blank-skeleton
-products=skeleton-product-group
-branch.integration=develop
-branch.production=master
+inactive = false
+products = data-science
