jira/VWW-4 rename refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@
 /ide-lib
 /dist
 *.o
+transient
+m4
+Makefile
+aclocal.m4
+autom4te.cache
+compile
+config.*
+configure
+install-sh
+missing
+m4
+Itmain.sh
+*.log
