VWW-13: Upgrade vowpal version to 8.5.0

--- a/build-jni/vw-linux-build-docker-img/Dockerfile
+++ b/build-jni/vw-linux-build-docker-img/Dockerfile
@@ -1,4 +1,10 @@
-FROM centos:6
+FROM centos:5
+
+# CentOS 5 reached EOL, we need to update repo URL
+RUN sed -i 's/enabled=1/enabled=0/' /etc/yum/pluginconf.d/fastestmirror.conf
+RUN sed -i 's/mirrorlist/#mirrorlist/' /etc/yum.repos.d/*.repo
+RUN sed -i 's|#baseurl=http://mirror.centos.org/centos/$releasever|baseurl=http://vault.centos.org/5.11|' /etc/yum.repos.d/*.repo
+
 
 RUN yum update -q -y
 RUN yum install -y epel-release
@@ -30,7 +36,6 @@ RUN wget http://ftp.gnu.org/gnu/automake/automake-1.15.tar.gz
 RUN tar xvzf automake-1.15.tar.gz
 RUN cd /automake-1.15 && ./configure && make && make install
 
-RUN wget https://ftp.gnu.org/gnu/libtool/libtool-2.4.6.tar.gz
+RUN wget http://ftpmirror.gnu.org/libtool/libtool-2.4.6.tar.gz
 RUN tar xvzf libtool-2.4.6.tar.gz
 RUN cd /libtool-2.4.6 && ./configure && make && make install
-
